<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="1278dp"
        android:layout_height="798dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="420dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/mainImage"
            android:scaleType="fitXY"
            android:src="@drawable/cabins" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow android:layout_width="wrap_content">

                <View android:layout_height="60dp" />

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:background="#B0C4DE"
                    android:padding="50dp"
                    android:text="@string/titleText"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:typeface="serif" />
            </TableRow>

            <TableRow>

                <View android:layout_height="60dp" />

                <TextView
                    android:id="@+id/cabinDescriptions"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/cabinDescriptions"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow>

                <View android:layout_height="60dp" />

                <TextView
                    android:id="@+id/cabinSelection"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:text="@string/cabinSelectionText"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <View android:layout_height="70dp" />

                <RadioGroup
                    android:id="@+id/cabinRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/standardRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_weight="1"
                        android:text="@string/standardRadioButton"
                        android:textSize="32sp" />

                    <RadioButton
                        android:id="@+id/upgradedCabinButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="100dp"
                        android:text="@string/upgradedCabinButton"
                        android:textSize="32sp" />

                </RadioGroup>

            </TableRow>

            <TableRow>

                <View android:layout_height="50dp" />

                <Button
                    android:id="@+id/scheduleButton"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:text="@string/scheduleButton"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow>

                <View android:layout_height="100dp" />

                <TextView
                    android:id="@+id/confirmationText"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:textSize="36sp"
                    android:singleLine="false"
                    android:maxLines="3"
                    android:maxWidth="800dp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


